se inicio la subida de archivos a github

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>prueba de git</h1>
 
+    <h2>iniciando subida de archivos a github</h2>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, reprehenderit minima! Autem tenetur eum perferendis necessitatibus veritatis, optio enim voluptatum ipsum minima nulla quo delectus animi dicta, culpa aliquam. Asperiores iste unde aperiam quas dolore a, amet in totam beatae architecto suscipit reiciendis hic pariatur fuga temporibus officiis, eum id.</p>
 </body>
 </html>
