--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, reprehenderit minima! Autem tenetur eum perferendis necessitatibus veritatis, optio enim voluptatum ipsum minima nulla quo delectus animi dicta, culpa aliquam. Asperiores iste unde aperiam quas dolore a, amet in totam beatae architecto suscipit reiciendis hic pariatur fuga temporibus officiis, eum id.</p>
 
 <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
+<p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
+<p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
 </body>
 </html>
