se edito desde vsc

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
 <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
 <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
+    <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE VSC</P>
+        <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE VSC</P>
 </body>
 </html>
