se agrego la funcion de saludar

--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
 <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE GITHUB <P>
     <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE VSC</P>
         <p> ESTE ES UN PARRAFO EDITADO DIRECTAMENTE DESDE VSC</P>
+
+            <input type="button" value="click" id="button" class="button">
+
+    <script src="js/scripts.js"></script>
 </body>
 </html>
